# AiQ

./: .dockerignore  .gitignore  Dockerfile.dev  README.md  app_config.json  disconnect.sql  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.gradle  check_out.txt  check_out2.txt  errors.txt  output.txt  seed.json
backend/.sqlx/: query-00c72cc0337903011381df1160612e72d60a5c1cce8418c43fae5387936ba769.json  query-00dfa86dfaf85ba55810e8c089de0607f710c2009a2a6a46b19d419bca9be1c0.json  query-024283de4f1075c9cbb6bfed6da1e14b8109f843372a220de60100f290c5e2c5.json  query-0799d62caf921b18ae84623b234f56ed4154066dacaabf08c9c0332af4c086ff.json  query-0a5ca86e56fa7af1da38d91c5e9325f1f568308cd1d026e8d1543bff4c5cea34.json  query-0f383a08f532b7d1c504de34ce031de8d0015ac1f3fc55b0512db6f3f3bbeeca.json  query-0f7877b1882ebae8d64d102511383ca29ceaf3abf3a3a40b10197f4ee801f8f7.json  query-125c691324e85122fce7337bc23e13efba5af096c8b1ffc108846c8f750f1387.json  query-12bf8473ae37da28cf6334cd6a88c8b1893ebe04ed4b5c03636e93cf37e079b4.json  query-133f02282bed30020763eeb670e0aeeffaecfcc88577f2f9bf632efaec8663d8.json  query-14c33331a1a086fb14635ef912a2e63601de6f0820905fbd95a66d705db9622d.json  query-157667aab28eca5bf8f279875e417095e1fa486735b57f61c75efaf1a215c57e.json  query-18044d57446597e8413bb7f1171d812182e56a51d3a0dbf1c13beba9c5d96b82.json  query-185313ea700a3a80c6e91fe974ec23a860476501121d1da66a7e8204ce0dd177.json  query-1a4c016b28c9b4a21a5ff776db0dc912df0c24023e31b8e931edc875445300fb.json  query-1cd03b38c18248016ec26e16f14224085b7cebb933e93f8ecd4cfc9f937f3637.json  query-1ef120bebeb56d542d234a1d4e9a145703a1f1a7b05a1a047962a06388660ea5.json  query-2207a8a2eefa9f664c217034b6c437b4e247316b2becb8a8c99739a3247bd29c.json  query-250230448b6403e47b23316be2083bb90096a699b0bb99b3f3c3fb50d3cf868f.json  query-25a1e13f1a542a06d62c201481ed87d7a86d0bbcd9954d6ea90fe62f8131cd26.json  query-274fee019bc58741a5327b7f90c539023f051e4964acc7ed99adc9f2187bf95d.json  query-282db284782ac979ddf8b3c0295730cf12f2fdf54a6ac1661b3d3de340b96a76.json  query-2b653b02b9ee20d553c59696fa0d84b0a15247905a3ac30db96db2953acfd657.json  query-2d51a36957f13e8776b62e1f9ccd48e997188ffa5941f178087b7c5c775097f6.json  query-2da6162f21c1b921ca62a0d3bb004049215b4dfec9706e4c2a39a4dd0e22d374.json  query-2e91482b79658dd6da35e37fcdaa162943ff4e3878f51927d4734cae4f7e27c3.json  query-3075a26e9a7ba25204ce630419fc9760edf0051cc8da8470458d745218fe0b02.json  query-30c309e0f2f230f5465a06de589ca0ac016b66c5f088ab0613a8c3df14de919e.json  query-3160a717b3df9bd4839eca2a8665e5a33c45d55679cc5bfc66eb22a0d803d2e0.json  query-3457ec97fa6cc88728716871b766da6629afa59d74d5497c2f7da63fda3d12b1.json  (+112 more)
(+819 files in other folders)
