[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros", "ws", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
dotenvy = "0.15.7"
futures = "0.3.32"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.8"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
[features]
ai-tests = []
